# Implicit_Coordination

./: .gitignore  .readme  Benchmark stuff.txt  Benchmarking notes.txt  Benchmarks Optimisation.txt  CMakeLists.txt  CMakeLists.txt.bak  Graph.dot  Notes on features.txt  Pepper_Planner.sln  README.md  Sally_Anne.dot  State_After.dot  State_Before.dot  action.dot  build.sh  build_and_run.sh  build_and_run.sh.bak  build_and_run_coin.sh  build_and_run_coin_flip.sh  build_and_run_coin_multi.sh  build_and_run_mapf.sh  build_and_run_single.sh  compile_graph.sh  compile_sally_anne.sh  compile_states.sh  hpc_job.sh  hpc_job_coin_flip.sh  hpc_job_coin_multi.sh  hpc_job_extended.sh  hpc_job_mapf.sh
Debug/: Domain_Loader.lib  Formula.lib  Pepper_Planner.ilk  Pepper_Planner_Tests.exp  Pepper_Planner_Tests.ilk  Pepper_Planner_Tests.lib
Debug_Output/: Graph.dot  Policy.dot  compile_all.sh  compile_graph_simple.sh  compile_graph_svg.sh  compile_policy.sh
Debug_Output/dot/: Action0.dot  Action1.dot  Action2.dot  State0.dot  State1.dot  State2.dot  State3.dot
Domain_Loader/: Custom_Lexer.cpp  Custom_Lexer.hpp  Custom_Parser.cpp  Custom_Parser.hpp  Domain_Buffer.cpp  Domain_Buffer.hpp  Domain_Interface.hpp  Domain_Loader.vcxproj  Domain_Loader.vcxproj.filters  General_Domain.cpp  Loader.cpp  Loader.hpp  Loader_Types.hpp  Maepl.hpp  Types.hpp  maepl.flex.cpp  maepl.l  maepl.tab.cpp  maepl.tab.h  maepl.y  snazzle.flex.cpp  snazzle.l  snazzle.tab.cpp  snazzle.tab.h  snazzle.y
Examples/: Block_Search.maepl  Block_Search3.maepl  Block_Search_Single.maepl  Coin_Flip.maepl  Coin_Flip_Multi.maepl  Coin_Flip_Multi2.maepl  Coin_Flip_Multi3.maepl  Coin_Flip_Multi4.maepl  Coin_Flip_Multi5.maepl  Dice5-3.maepl  False_Belief_Synthesis.maepl  MAPFDU.maepl  Sally_Anne.maepl  Second_Order.maepl  Stack.maepl  in.snazzle  simple.maepl  simple_transfer.maepl
Examples/Block_Search/: Block_Search.maepl
Examples/Coin_Flip/: Coin_Flip_1.maepl  Coin_Flip_10.maepl  Coin_Flip_11.maepl  Coin_Flip_12.maepl  Coin_Flip_13.maepl  Coin_Flip_14.maepl  Coin_Flip_15.maepl  Coin_Flip_16.maepl  (+44 more)
Formula/: Formula.cpp  Formula.hpp  Formula.vcxproj  Formula.vcxproj.filters  Formula_Component.cpp  Formula_Component.hpp  Formula_Converter.hpp  Formula_Core.hpp  Formula_Input_Interface.hpp  Formula_Types.hpp  Types.hpp
Pepper_Planner/: Accessibility_Relation.cpp  Accessibility_Relation.hpp  Action.cpp  Action.hpp  Action_Event.cpp  Action_Event.hpp  Action_Events.cpp  Action_Events.hpp  Action_Library.cpp  Action_Library.hpp  Agent.cpp  Agent.hpp  Agents.cpp  Agents.hpp  Atom_Arguments.cpp  Atom_Arguments.hpp  Atom_Buffer.cpp  Atom_Buffer.hpp  Atom_Lookup.cpp  Atoms.cpp  Atoms.hpp  Bisimulation_Context.cpp  Bisimulation_Context.hpp  Core.cpp  Core.hpp  DEL.cpp  DEL_Interface.cpp  DEL_Interface.hpp  DEL_Operations.cpp  DEL_Operations.hpp  Debugger.cpp  Debugger.hpp  Designated_Events.cpp  Designated_Events.hpp  Domain.cpp  Domain.hpp  Domain_Interface_Implementation.cpp  Domain_Interface_Implementation.h  Domain_Interface_Implementation.hpp  Edge_Conditions.cpp  (+69 more)
Pepper_Planner_Benchmarks/: MAPF_Benchmark.cpp  MAPF_Benchmark.hpp  Main.cpp  Pepper_Planner_Benchmarks.vcxproj  Pepper_Planner_Benchmarks.vcxproj.filters  Run.cpp  Run.hpp  Run_Planner.cpp  Run_Planner.hpp  Source_Files.cpp  Utils.cpp  Utils.hpp
Pepper_Planner_Tests/: Accessbility_Tests.cpp  Action_Tests.cpp  Bisimulation_Context_Tests.cpp  DEL_Operations_Bisimilar_Contraction_Tests.cpp  DEL_Operations_Perspective_Shift_Tests.cpp  DEL_Operations_Product_Update_Tests.cpp  DEL_Operations_Split_Into_Globals_Tests.cpp  DEL_Operations_Tests.cpp  Formula_To_String_Tests.cpp  Formula_Valuation_Tests.cpp  Graph_Tests.cpp  Loader_Integration_Tests.cpp  Pepper_Planner_Tests.cpp  Pepper_Planner_Tests.vcxproj  Pepper_Planner_Tests.vcxproj.filters  Planner_Action_Applicable_Tests.cpp  Propositions_Tests.cpp  Sally_Anne_First_Order_Tests.cpp  Sally_Anne_Second_Order_Planner_Tests.cpp  Sally_Anne_Second_Order_Tests.cpp  Source_Files.cpp  Test_MAPF_Planner.cpp  Test_Preparer.hpp  World_Valuation_Tests.cpp
Test_Cases/: Example_1.maepl  Example_2.maepl  Sally_Anne_First_Order.maepl  Sally_Anne_Peak.maepl  p1.maepl  p2.maepl  p3.maepl  p4.maepl
(+199 files in other folders)
